# AfraidOfDark

./: README.md  Todo_list.md
game/: Cargo.toml
game/assets/shaders/: fragment.shader  framebuffer_fragment.shader  framebuffer_vertex.shader  line_fragment.shader  line_vertex.shader  vertex.shader
game/src/: main.rs
game/src/engine/: game.rs  lib.rs  mod.rs
game/src/engine/assets/: Cargo.toml
game/src/engine/assets/src/: asset_server.rs  commons.rs  lib.rs  storage.rs  storage_server.rs  uuid.rs
game/src/engine/assets/src/processors/: files.rs  mod.rs  textures.rs
game/src/engine/assets/tests/: monothread.rs
game/src/engine/assets/tests/fixtures/: fixtures_abstract.json
game/src/engine/ecs/: components.rs  components_impl.rs  config.rs  mod.rs  resources.rs  systems.rs  time.rs
game/src/engine/inputs/: keyboard.rs
game/src/engine/logging/: consts.rs  logs.rs  logs_traits.rs  mod.rs
game/src/engine/rendering/: components.rs  debug.rs  gfx_device.rs  gfx_opengl_shaders.rs  mod.rs  opengl.rs  opengl_impl.rs  readme.md  renderer.rs  renderer_helpers.rs  renderer_storage.rs  shaders.rs
game/src/engine/utils/: app_settings.rs  file_system.rs  maths.rs  mod.rs  rendering_bridge.rs  world.rs
game/src/tests/: mod.rs  polylines.rs
