[package]
name = "afraid_of_dark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_ecs = ">= 0.15.3"
gl = ">= 0.14.0"
glfw = ">= 0.59.0"
glm = ">= 0.2.3"
image = ">= 0.25.5"
term = ">= 1.0.1"
rand = "0.4.6"
